--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,9 +26,13 @@
 		line-height: 1;
 	}
 
-	ol, ul {
+	ol {
 		list-style: none;
 	}
+
+/*	ol, ul {
+		list-style: none;
+	}*/	
 
 	blockquote, q {
 		quotes: none;
