--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,13 +26,13 @@
 		line-height: 1;
 	}
 
-	ol {
+/*	ol {
 		list-style: none;
-	}
+	}*/
 
-/*	ol, ul {
+	ol, ul {
 		list-style: none;
-	}*/	
+	}	
 
 	blockquote, q {
 		quotes: none;
