--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,6 +87,10 @@
 
 	/* Image */
 
+	.reviews { 
+		width: 100%;
+
+	 }
 	.image {
 		border-radius: 5px;
 		border: 0;
@@ -1736,7 +1740,8 @@
 		}
 
 /* List */
-
+	.style2 {float:left;
+			margin-left: 2%;}
 	ul.default {
 		list-style: disc;
 		padding-left: 1em;
