worked on sign in page and changed review picture

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1527,7 +1527,8 @@
 	form textarea {
 		-webkit-appearance: none;
 		display: block;
-		width: 100%;
+		width: 50%;
+        margin: 0 auto; 
 		border-radius: 8px;
 		border: solid 1px #eee;
 	}
@@ -1546,6 +1547,8 @@
 		line-height: 3em;
 		padding: 0 1em;
 	}
+
+
 
 	form select {
 		line-height: 3em;
