--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1511,7 +1511,12 @@
 	}
 
 /* Forms */
-
+#signin-form {
+    position:relative;
+    width: 100%; 
+    margin: 0 auto;
+    
+}
 	form label {
 		display: block;
 		font-weight: 800;
@@ -1527,8 +1532,8 @@
 	form textarea {
 		-webkit-appearance: none;
 		display: block;
-		width: 50%;
-        margin: 0 auto; 
+		width: 55%;
+        margin: 1em auto; 
 		border-radius: 8px;
 		border: solid 1px #eee;
 	}
@@ -1681,6 +1686,7 @@
 		cursor: pointer;
 		font-size: 1.35em;
 		padding: 0.6em 1.5em;
+        margin: 1em 43%;
 	}
 
 		input[type="button"].icon:before,
@@ -1955,7 +1961,6 @@
 		}
 
 /* Nav */
-
 	#nav {
 		position: absolute;
 		right: 0;
@@ -2238,7 +2243,7 @@
 		/* Header */
 
 			#header {
-				margin: 0 auto;
+                overflow: hidden;
 			}
 
 		/* Logo */
