--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1686,7 +1686,7 @@
 		cursor: pointer;
 		font-size: 1.35em;
 		padding: 0.6em 1.5em;
-        margin: 1em 43%;
+        margin: 1em;
 	}
 
 		input[type="button"].icon:before,
@@ -1798,7 +1798,6 @@
 		}
 
 /* Box */
-
 	.box {
 		background: #fff;
 		border-radius: 6px;
