--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 @import url("font-awesome.min.css");
-@import url("http://fonts.googleapis.com/css?family=Oleo+Script:400|Open+Sans:300,300italic,600,600italic,800");
+@import url("http://fonts.googleapis.com/css?family=Arvo:400|Open+Sans:300,300italic,600,600italic,800");
 
 /*
 	Verti by HTML5 UP
@@ -1749,7 +1749,7 @@
 		input[type="reset"].big,
 		button.big,
 		.button.big {
-			font-size: 2.25em;
+			font-size: 2.0em;
 			padding: 0.8em 0.9em;
 		}
 
@@ -1942,10 +1942,10 @@
 			background: #ff4486;
 			color: #fff;
 			border-radius: 6px;
-			font-family: 'Oleo Script', serif;
+			font-family: Arvo, serif;
 			font-weight: 400;
 			padding: 0.25em 0.2em 0.25em 0.2em;
-			font-size: 3.25em;
+			font-size: 2.75em;
 			letter-spacing: 0.05em;
 			display: inline-block;
 			vertical-align: middle;
@@ -2070,12 +2070,12 @@
 	}
 
 		#banner h2 {
-			font-size: 3.5em;
+			font-size: 3.0em;
 			margin: 0.1em 0 0.35em 0;
 		}
 
 		#banner p {
-			font-size: 2.75em;
+			font-size: 2.0em;
 			line-height: 1.35em;
 			margin: 0;
 		}
@@ -2609,7 +2609,7 @@
 		/* Logo */
 
 			#logo h1 {
-				font-size: 2.75em;
+				font-size: 3.25em;
 				padding: 0.2em 0.275em;
 			}
 
